Move The contact title outside the forms and set is a sectionHeader title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Contact Us</title>
 </head>
 <body>
-
+    <div class="contact-section_header">
+    <h2>Contact Us</h2>
+</div>
     <div class="contact-section">
         <div class="contact-info">
             <div class="contact-item" id="Dirección">
@@ -78,7 +80,6 @@
             </div>
         </div>
         <div class="contact-form">
-            <h2>Contact Us</h2>
             <form id="contactForm">
                 <input type="text" name="firstName" placeholder="First Name" required>
                 <input type="text" name="lastName" placeholder="Last Name" required>
