button to left, underlinded section, removed bkgColor

--- a/index.html
+++ b/index.html
@@ -82,12 +82,18 @@
         <div class="contact-form">
             <form id="contactForm">
                 <div class="contactForm_name">
-                <input type="text" name="firstName" placeholder="First Name" required id="Name">
-                <input type="text" name="lastName" placeholder="Last Name" required id="LastName">
-              </div>
+                    <input type="text" name="firstName" placeholder="First Name" required id="Name">
+                    <input type="text" name="lastName" placeholder="Last Name" required id="LastName">
+               </div>
+               <div class="contractForm_email">
                 <input type="email" name="email" placeholder="E-mail" required id="email">
+            </div>
+                <div class="contactForm_textArea">
                 <textarea name="message" placeholder="Message" rows="4" required id="textArea"></textarea>
+            </div>
+            <div class="contact-form_button">
                 <button type="submit" id="button">Send</button>
+            </div>
             </form>
             
         </div>
